--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-fastapi
-uvicorn
-python-multipart
-cryptography
-pyotp
-requests
+fastapi==0.104.1
+uvicorn==0.24.0
+cryptography==41.0.5
+pyotp==2.9.0
+python-multipart==0.0.6
